--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,14 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
+env:
+  TMDB_BASE_URL: ${{ secrets.TMDB_BASE_URL }}
+  TMDB_USERNAME: ${{ secrets.TMDB_USERNAME }}
+  TMDB_PASSWORD: ${{ secrets.TMDB_PASSWORD }}
+  TMDB_EMAIL: ${{ secrets.TMDB_EMAIL }}
 jobs:
   test:
     timeout-minutes: 60
@@ -12,24 +17,28 @@ jobs:
       image: mcr.microsoft.com/playwright:v1.58.2-noble
       options: --user 1001
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    #- name: Install Playwright Browsers
-      #run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test --reporter=html
-      env:
-        TMDB_BASE_URL: ${{ secrets.TMDB_BASE_URL }}
-        TMDB_USERNAME: ${{ secrets.TMDB_USERNAME }}
-        TMDB_PASSWORD: ${{ secrets.TMDB_PASSWORD }}
-        TMDB_EMAIL: ${{ secrets.TMDB_EMAIL }}
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v6
+        with:
+          node-version: lts/*
+      - name: Install dependencies
+        run: npm ci
+      - name: Run changed Playwright tests
+        run: |
+          BASE_BRANCH=${GITHUB_BASE_REF:-main}
+          git fetch origin $BASE_BRANCH
+          CHANGED=$(git diff --name-only origin/$BASE_BRANCH...HEAD | grep '\.spec\.ts$' || true)
+
+          if [ -z "$CHANGED" ]; then
+            npx playwright test --reporter=html
+          else
+            npx playwright test $CHANGED --reporter=html
+          fi
+      - uses: actions/upload-artifact@v5
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
